# gapic-python-basic

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/googleapis/google/cloud/vision/v1/: geometry.proto
examples/simple-types/: buf.gen.yaml
examples/simple-types/gen_target/simple_types_v1/types/: widgets.py
examples/simple-types/proto/: Makefile  buf.gen.yaml  buf.yaml
examples/simple-types/proto/simple_types/v1/: simple_types.proto
examples/simple-types/proto/widgets/v1/: .widgets.proto.swp  widgets.proto
templates/dataclasses/: Makefile.j2  README.rst.j2  _base.py.j2  _generated_notice.j2  noxfile.py.j2  setup.py.j2
templates/dataclasses/%namespace/%name/: __init__.py.j2
templates/dataclasses/%namespace/%name_%version/%sub/services/%service/: __init__.py.j2  client.py.j2  pagers.py.j2
templates/dataclasses/%namespace/%name_%version/%sub/services/%service/transports/: __init__.py.j2  base.py.j2  grpc.py.j2
templates/dataclasses/%namespace/%name_%version/%sub/types/: %proto.py.j2  _enum.py.j2  _message.py.j2
templates/dataclasses/docs/: conf.py.j2
templates/dataclasses/docs/_static/: custom.css.j2
templates/dataclasses/examples/: feature_fragments.j2  sample.py.j2
templates/dataclasses/tests/unit/gapic/%name_%version/%sub/: test_%service.py.j2  test_macros.j2
