[tool.poetry]
name = "gapic-python-basic"
version = "0.1.0"
description = ""
authors = ["Fraser Isbester <fraserisbester@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
protobuf = "^4.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
