[tool.poetry]
name = "gapic-python-basic"
version = "0.1.0"
description = "Tools for generating Code"
authors = ["Fraser Isbester <fraserisbester@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
protobuf = "^4.24.2"
gapic-generator = "^1.11.4"
pandoc = "^2.3"
black = "^23.7.0"
ruff = "^0.0.287"
pyright = "^1.1.326"
setuptools = "^68.2.0"
autoimport = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
